tests/fixtures/guardrails/invalid/route-dynamic-import-bypass/app/routes/products.ts
const delegatedTarget = "~/app/services/products.server";
const warmupImport = import(delegatedTarget);

export const loader = async () => import("./helper");

void warmupImport;
